--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,7 +14,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your App. All rights reserved.</p>
+        <p>&copy; 2024 Clarity. All rights reserved.</p>
     </footer>
 </body>
 </html>
