--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Your App. All rights reserved.</p>
+        <p>&copy; 2024 Clarity. All rights reserved.</p>
     </footer>
 </body>
 </html>
