--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <form action="/signup" method="post">
+        <form action="/auth/signup" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
